--- a/css/style.css
+++ b/css/style.css
@@ -45,7 +45,7 @@
   
   .bg { 
     /* The image used */
-    background-image: url("images/sverige.png");
+    background-image: url("images/forest.jpg");
   
     /* Full height */
     height: 100%; 
